deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httprelay
  annotations:
    kubernetes.io/ingress.global-static-ip-name: httprelay-ip
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  backend:
    serviceName: httprelay
    servicePort: http
  tls:
    - secretName: demo-httprelay-io-crt
      hosts:
        - demo.httprelay.io
